Конфигурация версии 1